<resources>
    <string name="app_name">WalkTalk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends">Friends</string>
    <string name="pending_friend_requests">Pending requests</string>
    <string name="chat">Chat</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="my_routes">My routes</string>
    <string name="my_events">My events</string>
    <string name="attending_events">Attending events</string>
    <string name="notifications">Notifications</string>
    <string name="sandwich_description">Icon for sandwich menu (3 horizontal lines)</string>
    <string name="my_profile_picture">My profile picture</string>
    <string name="messages">Messages</string>
    <string name="pedometer">Pedometer</string>
    <string name="explore">Explore</string>
    <string name="friend_events">Friend events</string>
    <string name="ic_add_description">Plus icon</string>
    <string name="event_name">Event name:</string>
    <string name="select_route">Select route:</string>
    <string name="select_pace">Select pace:</string>
    <string name="event_date">Event date:</string>
    <string name="date_hint">Select date when the event will take place</string>
    <string name="event_name_hint">Enter the event name</string>
    <string name="create_new_event">Create new event</string>
    <string name="number_of_people_going">%1$s people going</string>
    <string name="number_of_kilometers">%1$s km</string>
    <string name="pace">%1$s pace</string>
    <string name="cross_road_icon">Cross-road icon</string>
    <string name="multiple_people_in_group">Multiple people in group</string>
    <string name="speedometer">Speedometer</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="people_coming">People coming</string>
    <string name="send_invitation">Send invitation</string>
    <string name="start_event">Start event</string>
    <string name="trash_icon">Trash icon</string>
    <string name="group_chat">Group chat</string>
    <string name="invite_sent">Invite sent</string>
    <string name="retry">Retry</string>
    <string name="waiting_for_approval">Waiting for approval…</string>
    <string name="update_event">Update event</string>
    <string name="event_name_must_not_be_empty">Event name must not be  empty!</string>
    <string name="pending_event_requests">Pending event requests</string>
    <string name="profile_picture_of_user">profile picture of user</string>
    <string name="back_arrow">Back arrow</string>
    <string name="pending_invites">Pending invites</string>
    <string name="no_invites_yet">No invites yet…</string>
    <string name="accepted">Accepted</string>
    <string name="friends_only">Friends only</string>
    <string name="public_option">Public</string>
    <string name="visibility">Visibility</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="day_leaderboard">Day</string>
    <string name="week_leaderboard">Week</string>
    <string name="month_leaderboard">Month</string>
    <string name="event_started">Event started</string>
</resources>