<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item
       android:id = "@+id/nav_routes"
       android:title="@string/my_routes"
       android:icon="@drawable/ic_route"
       android:checkable="true"/>
   <item
       android:id = "@+id/nav_events"
       android:title="@string/my_events"
       android:icon="@drawable/ic_event"
       android:checkable="true"/>
   <item
       android:id = "@+id/nav_friends"
       android:title="@string/friends"
       android:icon="@drawable/ic_friends"
       android:checkable="true"/>
   <item
       android:id = "@+id/nav_attending_events"
       android:title="@string/attending_events"
       android:icon="@drawable/ic_attending_event"
       android:checkable="true"/>
   <item
       android:id = "@+id/nav_notifications"
       android:title="@string/notifications"
       android:icon="@drawable/ic_notifications"
       android:checkable="true"/>
   <item
       android:id = "@+id/messages"
       android:title="@string/messages"
       android:icon="@drawable/ic_chat"
       android:checkable="true"/>

</menu>