<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name" />
    <EditText
        android:id="@+id/et_new_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:hint="@string/event_name_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/txt_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_route" />

    <Spinner
        android:id="@+id/spn_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_pace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_pace" />


    <Spinner
        android:id="@+id/spn_pace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_date" />

    <EditText
        android:id="@+id/et_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date_hint"
        android:importantForAutofill="no"
        android:inputType="date" />
</LinearLayout>