<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_green">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/img_events_sandwich_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="96dp"
            android:layout_toStartOf="@+id/txt_my_events"
            android:contentDescription="@string/sandwich_description"
            android:src="@drawable/ic_sandwich_menu" />

        <TextView
            android:id="@+id/txt_my_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="85dp"
            android:layout_toStartOf="@+id/img_events_profile_picture"
            android:text="@string/my_events"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/img_events_profile_picture"
            android:contentDescription="@string/my_profile_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_user" />

    </RelativeLayout>

</RelativeLayout>