<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_event_detail"
    android:layout_width="match_parent"
    android:backgroundTint="@color/beige"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llv_event_detail_attributes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llh_event_detail_kilometers_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgv_event_detail_kilometres"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/cross_road_icon"
                android:src="@drawable/ic_signpost" />

            <TextView
                android:id="@+id/txtv_event_detail_kilometres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imgv_event_detail_people"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/multiple_people_in_group"
                android:src="@drawable/ic_multiple_users" />

            <TextView
                android:id="@+id/txtv_event_detail_people"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llh_event_detail_pace_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgv_event_detail_pace"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/speedometer"
                android:src="@drawable/ic_speedometer" />

            <TextView
                android:id="@+id/txtv_event_detail_pace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/imgv_event_detail_date"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:contentDescription="@string/calendar_icon"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/txtv_event_detail_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>